BiddingExamination/kubernetes/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: biddingexamination
  namespace: bidding
  labels:
    app: biddingexamination
spec:
  replicas: 1
  selector:
    matchLabels:
      app: biddingexamination
  template:
    metadata:
      labels:
        app: biddingexamination
    spec:
      containers:
        - name: biddingexamination
          image: user01skccacr.azurecr.io/biddingexamination:latest
          ports:
            - containerPort: 8080
