BiddingExamination/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: biddingexamination
  namespace: bidding
  labels:
    app: biddingexamination
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: biddingexamination
